# euphony

./: .gitignore  README.md  agents.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.ts
.fttemplates/default-template/: [FTName].ts
.github/workflows/: build.yml  publish.yml
public/: global.css
public/examples/: simple-harmony-convos.jsonl
server/: fastapi-main.py
src/: euphony.ts
src/components/app/: app.css  app.ts  local-data-worker.ts  request-worker.ts  url-manager.ts
src/components/codex/: codex.css  codex.ts
src/components/confirm-dialog/: confirm-dialog.ts
src/components/conversation/: conversation.css  conversation.ts
src/components/floating-toolbar/: floating-toolbar.css  floating-toolbar.ts
src/components/input-dialog/: input-dialog.css  input-dialog.ts
src/components/json-viewer/: json-viewer.css  json-viewer.ts
src/components/menu/: menu.css  menu.ts
src/components/message-code/: message-code.css  message-code.ts
src/components/message-developer-content/: message-developer-content.css  message-developer-content.ts
src/components/message-hidden/: message-hidden.css  (+1 more)
src/config/: config.ts
src/css/: component-global.css  message-collapse.css  message-config-table.css  message-content-default.css  message-markdown.css  message-nested-config-table.css  prism-coldark-auto.css
src/types/: common-types.ts  harmony-types.ts
src/utils/: api-manager.ts  codex-session.ts  dompurify-configs.ts  harmony-render.ts  marked-katex-extension.ts  patch-preview.ts  utils.ts
(+18 files in other folders)
